<resources>

    <!-- Main Categories-->
    <string name="arithmetic">Arithmetic</string>
    <string name="speed_numbers">Speed Numbers</string>
    <string name="poetry">Poetry</string>
    <string name="speed_cards">Speed Cards</string>
    <string name="names_and_faces">Names and Faces</string>

    <!-- For Settings Activity -->
    <string name="settings_header">Settings</string>
    <string name="start_button">Start</string>

    <string name="arithmetic_preference">Arithmetic</string>
    <string name="operation_type">Operation Type</string>
    <string name="arithmetic_auto_refresh">Auto Refreshes New Question When Correct</string>
    <string name="digits_title">Digits of Operands</string>

    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>

    <string name="speed_num_row">Number of Rows</string>
    <string name="speed_num_col">Number of Columns</string>

    <!-- Auto-Generated -->
    <string name="app_name">MentalTraining</string>
    <string name="title_activity_speed_numbers">SpeedNumbersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="speed_number_string">TextView</string>
    <string name="title_activity_category_setup">CategorySetup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_memory_cards">Speed Cards</string>

</resources>
