<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_header">
        <ListPreference
            app:title="@string/operation_type"
            app:key="operation_type"
            app:entries="@array/arithmetic_operations"
            app:entryValues="@array/arithmetic_operations"
            app:defaultValue="Addition"
            app:summary="%s" />

        <SwitchPreference
            app:title="@string/arithmetic_auto_refresh"
            app:key="arithmetic_auto_refresh"
            app:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/addition"
        app:key="addition">

        <!--Addition digits -->
        <ListPreference
            app:title="@string/digits_title"
            app:key="addition_digits_key"
            app:entries="@array/addition_digits_array"
            app:entryValues="@array/addition_digits_array"
            app:summary="%s"
            app:defaultValue="2"
            app:isPreferenceVisible="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/subtraction"
        app:key="subtraction">
        <ListPreference
            app:title="@string/digits_title"
            app:key="subtraction_digits_key"
            app:entries="@array/addition_digits_array"
            app:entryValues="@array/addition_digits_array"
            app:summary="%s"
            app:defaultValue="2"
            app:isPreferenceVisible="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/multiplication"
        app:key="multiplication">
        <ListPreference
            app:title="@string/digits_title"
            app:key="multiplication_digits_key"
            app:entries="@array/addition_digits_array"
            app:entryValues="@array/addition_digits_array"
            app:summary="%s"
            app:defaultValue="2"
            app:isPreferenceVisible="true" />

        <PreferenceCategory app:title="@string/division"
            app:key="division">
            <ListPreference
                app:title="@string/digits_title"
                app:key="division_digits_key"
                app:entries="@array/addition_digits_array"
                app:entryValues="@array/addition_digits_array"
                app:summary="%s"
                app:defaultValue="2"
                app:isPreferenceVisible="true" />
        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>