<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header">
        <ListPreference
            app:title="@string/speed_num_row"
            app:key="speed_num_row"
            app:entries="@array/speed_num_rows_cols"
            app:entryValues="@array/speed_num_rows_cols"
            app:summary="%s"
            app:defaultValue="5"/>
        <ListPreference
            app:title="@string/speed_num_col"
            app:key="speed_num_col"
            app:entries="@array/speed_num_rows_cols"
            app:entryValues="@array/speed_num_rows_cols"
            app:summary="%s"
            app:defaultValue="5"/>
    </PreferenceCategory>

</PreferenceScreen>